# gnome-music

./: .gitlab-ci.yml  .travis.yml  README  ci_build.sh  ci_make_nightly_copr.sh  ci_pep8.sh  ci_pyflakes.sh  copr.enc  id_rsa.enc  meson.build  secrets.tar.enc
data/: meson.build
help/: meson.build
po/: meson.build
