message('Prepare help files')
help_files = [
    'introduction.page',
    'index.page',
    'play-music.page',
    'playlist-create-albums.page',
    'playlist-create-songs.page',
    'playlist-create-artists.page',
    'playlist-delete.page',
    'playlist-remove-songs.page',
    'playlist-repeat.page',
    'playlist-shuffle.page',
    'search.page',
    'legal.xml'
]